--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,61 +1,17 @@
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+requires = ["setuptools>=64"]
+build-backend = "setuptools.build_meta"
 
 [project]
 name = "matrixlayout"
-dynamic = ["version"]
-description = ''
-readme = "README.md"
-requires-python = ">=3.8"
-license = "MIT"
-keywords = []
-authors = [
-  { name = "ea42gh", email = "ea42_github@mail.com" },
-]
-classifiers = [
-  "Development Status :: 4 - Beta",
-  "Programming Language :: Python",
-  "Programming Language :: Python :: 3.8",
-  "Programming Language :: Python :: 3.9",
-  "Programming Language :: Python :: 3.10",
-  "Programming Language :: Python :: 3.11",
-  "Programming Language :: Python :: 3.12",
-  "Programming Language :: Python :: Implementation :: CPython",
-  "Programming Language :: Python :: Implementation :: PyPy",
-]
-dependencies = []
+version = "0.0.0"
+description = "Matrix-based layout and presentation library (template environment prototype)"
+requires-python = ">=3.9"
+dependencies = ["jinja2>=2.11"]
 
-[project.urls]
-Documentation = "https://github.com/ea42gh/matrixlayout#readme"
-Issues = "https://github.com/ea42gh/matrixlayout/issues"
-Source = "https://github.com/ea42gh/matrixlayout"
-
-[tool.hatch.version]
-path = "src/matrixlayout/__about__.py"
-
-[tool.hatch.envs.types]
-extra-dependencies = [
-  "mypy>=1.0.0",
-]
-[tool.hatch.envs.types.scripts]
-check = "mypy --install-types --non-interactive {args:src/matrixlayout tests}"
-
-[tool.coverage.run]
-source_pkgs = ["matrixlayout", "tests"]
-branch = true
-parallel = true
-omit = [
-  "src/matrixlayout/__about__.py",
-]
-
-[tool.coverage.paths]
-matrixlayout = ["src/matrixlayout", "*/matrixlayout/src/matrixlayout"]
-tests = ["tests", "*/matrixlayout/tests"]
-
-[tool.coverage.report]
-exclude_lines = [
-  "no cov",
-  "if __name__ == .__main__.:",
-  "if TYPE_CHECKING:",
+[tool.pytest.ini_options]
+addopts = "-q"
+testpaths = ["tests"]
+markers = [
+    "render: end-to-end TeX->SVG smoke tests (opt-in via MATRIXLAYOUT_RUN_RENDER_TESTS=1)",
 ]
