--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,21 +1,26 @@
 [build-system]
-requires = ["setuptools>=64"]
-build-backend = "setuptools.build_meta"
+    requires = ["setuptools>=68", "wheel"]
+    build-backend = "setuptools.build_meta"
 
-[project]
-name = "matrixlayout"
-version = "0.0.0"
-description = "Matrix-based layout and presentation library (template environment prototype)"
-requires-python = ">=3.9"
-dependencies = ["jinja2>=2.11"]
-
-[tool.pytest.ini_options]
-addopts = "-q"
-testpaths = ["tests"]
-markers = [
-    "render: end-to-end TeX->SVG smoke tests (opt-in via MATRIXLAYOUT_RUN_RENDER_TESTS=1)",
+    [project]
+    name = "matrixlayout"
+    version = "0.0.1"
+    description = "Layout-only TeX generators for matrix-themed figures (no toolchain execution)."
+    readme = "README.md"
+    requires-python = ">=3.9"
+    license = {text = "MIT"}
+    dependencies = [
+  "jinja2>=3.1",
+  "sympy>=1.10",
+  "jupyter-tikz>=0.1.0",
 ]
 
-[tool.setuptools.package-data]
-matrixlayout = ["templates/*.tex.j2"]
+    [tool.setuptools.packages.find]
+    where = ["."]
+    exclude = ["tests*", "test*"]
 
+[tool.setuptools]
+include-package-data = true
+
+[tool.setuptools.package-data]
+matrixlayout = ["templates/*.j2"]
